Add steps to rhubarb recipe page

--- a/recipes/royal-rhubarb-crisp.html
+++ b/recipes/royal-rhubarb-crisp.html
@@ -23,5 +23,13 @@
                 <li>1/4 cup sifted all purpose flour</li>
                 <li>1/4 cup butter, melted</li>
             </ul>
+        <h3>Steps</h3>
+            <ol>
+                <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+                <li>Mix rhubarb, white sugar, tapioca, and salt in a large bowl and toss to coat; let rest, stirring occasionally, for 30 minutes.</li>
+                <li>Stir strawberries into the rhubarb mixture; spread into a casserole dish.</li>
+                <li>Stir oats, brown sugar, flour, and butter together in a separate bowl until crumbly; sprikle over the fruit mixture in the casserole dish.</li>
+                <li>Bake in preheated oven until set, about 45 minutes.</li>
+            </ol>
     </body>
 </html>
