--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/royal-rhubarb-crisp.html">Royal Rhubarb Crisp</a>
+            <ol>
+                <li><a href="./recipes/royal-rhubarb-crisp.html">Royal Rhubarb Crisp</a></li>
+                <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+                <li><a href="./recipes/cheesecake.html">Best Cheesecake Ever</a></li>
+            </ol>
     </body>
 </html>
