--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,5 +12,28 @@
         <h2>Description</h2>
         <p>Everyone loves a good lasagna, right? It's a great way to feed a crowd and a perfect dish to bring to a potluck. It freezes well. It reheats well. Leftovers will keep you happy for days.</p>
         <p>This classic lasagna is made with an easy meat sauce as the base. Layer the sauce with noodles and cheese, then bake until bubbly! This is great for feeding a big family, and freezes well, too.</p>
+        <h3>Ingredients</h3>
+            <ul>
+              <li>1 pound sweet Italian sausage</li>  
+              <li>3/4 pound lean ground beef</li>
+              <li>1/2 cup minced onion</li>
+              <li>2 cloves garlic, crushed</li>
+              <li>1 (28 oz) can crushed tomatoes</li>
+              <li>2 (6 oz) cans tomato paste</li>
+              <li>2 (6.5 oz) cans canned tomato sauce</li>
+              <li>1/2 cup water</li>
+              <li>2 tablespoons white sugar</li>
+              <li>1 1/2 teaspoons dried basil leaves</li>
+              <li>1/2 teaspoon fennel seeds</li>
+              <li>1 teaspoon Italian seasoning</li>
+              <li>1 1/2 teaspoons salt, divided, or to taste</li>
+              <li>1/4 teaspoon ground black pepper</li>
+              <li>4 tablespoons chopped fresh parsley</li>
+              <li>12 lasagna noodles</li>
+              <li>16 oz ricotta cheese</li>
+              <li>1 egg</li>
+              <li>3/4 pound mozzarella cheese</li>
+              <li>3/4 cup grated Parmesan cheese</li>
+            </ul>
     </body>
 </html>
