Add ingredients to cheesecake recipe page

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -13,5 +13,26 @@
         <p>Today I am so excited to show you how to make the best Cheesecake Recipe of your life. Simple, classic, and no water bath required!! The texture is smooth, rich, and creamy, served over a crisp homemade graham cracker crust.</p>
         <p>This cheesecake recipe has been a long time coming. For a recipe with so few ingredients (cream cheese, eggs, sugar, sour cream, vanilla & salt), it took a lot longer than you might think to develop the perfect version. I have shared a few cheesecake variations in the past, including my No-Bake Cheesecake, but getting a perfected classic version took lots of testing. Finally, here we are.</p>
         <p>Oh, and we are skipping the water bath! I have always found them to be largely unnecessary with cheesecakes. Cook yours on a low temperature and follow my tips below and you will have a perfectly creamy and crack-less cheesecake without all the hassle of a water bath.</p>
+        <h3>Ingredients</h3>
+            <ul>
+               <li>Graham Cracker crust
+                   <ul>
+                       <li>1 1/2 cups graham cracker crumbs</li>
+                       <li>2 tablespoons sugar</li>
+                       <li>1 tablespoon brown sugar</li>
+                       <li>7 tablespoons melted butter</li>
+                   </ul>
+               </li> 
+               <li>Cheesecake
+                   <ul>
+                       <li>32 oz cream cheese, softened to room temperature</li>
+                       <li>1 cup sugar</li>
+                       <li>2/3 cups sour cream</li>
+                       <li>1 1/2 teaspoons vanilla extract</li>
+                       <li>1/8 teaspoon salt</li>
+                       <li>4 large eggs room temperature, lightly beaten</li>   
+                   </ul>
+               </li>
+            </ul>
     </body>
 </html>
