Link style.css to html files

--- a/recipes/royal-rhubarb-crisp.html
+++ b/recipes/royal-rhubarb-crisp.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Royal Rhubarb Crisp Recipe</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
 
     <body>
