--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,7 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>World's Best Lasagna Recipe</title>      
+        <title>World's Best Lasagna Recipe</title>    
+        <link rel="stylesheet" href="../css/style.css">  
     </head>
 
     <body>
