Style recipe pages background color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
 
-    <body>
+    <body id="page">
         <h1 class="header">Odin Recipes</h1>
             <ol>
                 <li><a class="recipe1" href="./recipes/royal-rhubarb-crisp.html">Royal Rhubarb Crisp</a></li>
